Fix boolean expression (XERCESC-1837)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@709141 13f79535-47bb-0310-9956-ffa450edef68